--- a/bmi.html
+++ b/bmi.html
@@ -13,6 +13,7 @@ Age is irrelevant
     <link rel="stylesheet" href="bmi.css">
     <link rel="stylesheet" href="bmi.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="/bmi.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -22,17 +23,17 @@ Age is irrelevant
 <body>
     <div class="header">
         <div class="wrapper">
-          <form>
+          <form action="/" method="post">
             <h1>BMI calculator</h1>
             <p>Insert Your Age</p>
-            <input type="text" id="age">
+            <input type="text" id="age" name="age">
             <p>Insert Weight in Kg</p>
-            <input type="text" id="weight">
+            <input type="text" id="weight" name="weight">
             <br>
             <p>Insert Height in cm</p>
-            <input type="text" id="height">
+            <input type="text" id="height" name="height">
             <br>
-            <button id="calc">check</button>
+            <button id="calc" type="submit">check</button>
             <p id="result"></p>
           </form>
         </div>
